--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && umi dev",
+    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && umi build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
